# rdoc

./: .gitignore  Cargo.toml  README.md  appveyor.yml
rdoc-test/: Cargo.toml  doc.md
rdoc-test/src/: main.rs
src/: lib.rs
